--- a/index.html
+++ b/index.html
@@ -11,36 +11,51 @@
 		<div class="topBar">
 			<div class="comWidth">
 				<div class="leftArea">		
-					<a href="#" class="collection">收藏慕课</a>
+					<a href="#" class="collection">收藏京西</a>
 				 </div>
 				<div class="rightArea"> 
-					欢迎来到慕课网！<a href="#">【登陆】</a> <a href="#">【免费注册】</a>
+					欢迎来到京西网！<a href="#">【登陆】</a> <a href="#">【免费注册】</a>
 				</div>
 			</div>
 
 		</div>
 		<div class="logoBar">
 			<div class="comWidth">
-				<div class="logo">
-					<a href="#"><img src="images/logo.jpg" alt="慕课网"></a>
+				<div class="logo fl">
+					<a href="#"><img src="images/logo.jpg" alt="京西网"></a>
 				</div>
-				<div class="search_box">
-					<input type="text" class="search_text">
-					<input type="button" value="搜 索" class="search_btn">
+				<div class="search_box fl">
+					<input   type="text" class="search_text fl">
+					<input type="button" value="搜 索" class="search_btn fr">
 				</div>
-				<div class="shopCar">
-					<span class="shopText">购物车</span>
-					<span class="shopNum">0</span>
+				<div class="shopCar fr">
+					<span class="shopText fl">购物车</span>
+					<span class="shopNum fl">0</span>
 				</div>
 			</div>
 		</div>
 		<div class="navBox">
 			<div class="comWidth">
-				<div class="shopClass">
-					<h3>全部商品分类</h3>
+				<div class="shopClass fl">
+					<h3>全部商品分类<i></i></h3>
+					<div class="shopClass_show">
+						<dl>
+							<dt>
+								<a href="#">手机</a>
+								<a href="#">数码</a>
+								<a href="#">合约机</a>
+							</dt>
+							<dd>
+								<a href="#">荣耀3x</a>
+								<a href="#">单反</a>
+								<a href="#">智能设备</a>
+							</dd>
+						</dl>
+						
+					</div>
 				</div>
-				<ul class="nav">
-					<li><a href="#">数码城</a></li>
+				<ul class="nav fl">
+					<li><a href="#" class="active">数码城</a></li>
 					<li><a href="#">天黑黑</a></li>
 					<li><a href="#">团购</a></li>
 					<li><a href="#">发现</a></li>
@@ -51,5 +66,8 @@
 			</div>
 		</div>
 	</div>
+
+
+
 </body>
 </html>
